@@ -2,8 +2,9 @@ package domain.ladder;
 
 import utility.RandomGenerator;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 public class LadderFrameLine {
@@ -14,7 +15,11 @@ public class LadderFrameLine {
     }
 
     private List<LadderFrame> generateFrames(int numberOfFrame) {
-        return Stream.iterate(LadderFrame.SPACE, this::generateBridge).skip(1).limit(numberOfFrame).toList();
+        return Stream
+                .iterate(LadderFrame.SPACE, this::generateBridge)
+                .skip(1)
+                .limit(numberOfFrame)
+                .collect(Collectors.toList());
     }
 
     private LadderFrame generateBridge(LadderFrame previousFrame) {
@@ -29,12 +34,11 @@ public class LadderFrameLine {
     }
 
     public List<Integer> getBridgeIndexes() {
-        List<Integer> result = new ArrayList<>();
-        for (int i = 0; i < frames.size(); i++) {
-            if (frames.get(i) == LadderFrame.BRIDGE) {
-                result.add(i);
-            }
-        }
-        return result;
+        return IntStream
+                .range(0, frames.size())
+                .filter(index -> frames.get(index) == LadderFrame.BRIDGE)
+                .boxed()
+                .collect(Collectors.toList());
     }
+
 }
